--- a/ClassLib/ClassLib.csproj
+++ b/ClassLib/ClassLib.csproj
@@ -49,9 +49,10 @@
     <Compile Include="TASK1\MiddleCarriage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TASK1\Train.cs" />
+    <Compile Include="TASK3\ElectroGuitar.cs" />
+    <Compile Include="TASK3\Guitar.cs" />
+    <Compile Include="TASK3\IMusicInstrument.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TASK3\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
